istio/patch-checker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-deploy-checker
  annotations:
    sidecar.istio.io/inject: "true"
    proxy.istio.io/config: |
      holdApplicationUntilProxyStarts: true
